<resources>
    <string name="app_name">Story App</string>

    <!--Menu Strings-->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_explore">Explore</string>
    <string name="title_post">Post</string>

    <!--Bottom Pop Up-->
    <string name="bottom_title_post">Choose what post you want to create</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!--onboarding & get started-->
    <string name="sub_title_onboarding_one">Share Everything you want</string>
    <string name="title_onboarding_one">SHARE YOUR DICODING STORY</string>
    <string name="description_onboarding_one">Show your stories, experiences, moments here freely without worrying and show your happiness more deeply here.</string>
    <string name="text_skip">Skip</string>
    <string name="text_next">Next</string>
    <string name="sub_title_onboarding_two">Equipped with multi-language</string>
    <string name="title_onboarding_two">No need to worry about language</string>
    <string name="text_get_started_now">Get Started Now</string>
    <string name="subtitle_get_started">it\'s time to start</string>
    <string name="title_get_started_now">Let\'s explore your story now</string>

    <!--Activity-->
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_setting">Settings</string>
    <string name="text_logout">Logout</string>
    <string name="text_language">language</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_desc_login">Enter Valid Email and password to continue</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_login">Login</string>
    <string name="text_havent_any_account">Haven’t any account?</string>
    <string name="text_desc_register">Make Account for continue</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_already_have_account">Already Have Account?</string>
    <string name="text_register">Register</string>
    <string name="text_your_name">Your Name</string>
    <string name="text_upload">Upload</string>
    <string name="text_error_custome_edittext">Password cannot be less than 8 characters</string>
    <string name="text_error_email">Please fill in your email!!</string>

    <!--Text Dialog-->
    <string name="text_desc_success_login">You have successfully logged in. Can\'t wait?</string>
    <string name="text_title_success_login" translatable="false">Yeay</string>
    <string name="text_button_success_login">Continue</string>

    <string name="text_error_api">A Problem Happens %1$s</string>

    <!--Text Logout-->
    <string name="text_title_logout">Are you sure?</string>
    <string name="text_desc_logout">Your Session data will be cleared, and you will need to log in again.</string>
    <string name="text_button_cancle" translatable="false">Cancle</string>
    <string name="please_enter_your_story_description">Please enter your story description</string>
    <string name="text_warn_back_story">Your Story data will be deleted</string>
    <string name="empty_image_warning">Please input the image file and descriptor first.</string>

    <string name="text_email_invalid">Your Email Invalid</string>
    <string name="text_upload_success">story upload successful</string>
    <string name="text_back">Back to %1$s</string>
    <string name="MainActivity">MainActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_retry">retry</string>
    <string name="text_timeout">Timeout</string>
    <string name="share_location">Share Location</string>
</resources>