<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/activity_onboarding_scene3"
    tools:context=".ui.Onboarding.OnboardingActivity">

    <View
        android:id="@+id/bg_image"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/text_skip"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_get_started"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:src="@drawable/illus_onboarding_page_one"
        app:layout_constraintBottom_toBottomOf="@+id/bg_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_image" />

    <TextView
        android:id="@+id/tv_subtitle_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sub_title_onboarding_one"
        android:textColor="@color/blue_patian_normal"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_image" />

    <TextView
        android:id="@+id/tv_title_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/title_onboarding_one"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_get_started" />

    <TextView
        android:id="@+id/tv_desc_onboarding_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/description_onboarding_one"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_get_started" />

    <ImageView
        android:id="@+id/iv_onboarding_two"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:src="@drawable/illus_onboarding_page_two"
        app:layout_constraintBottom_toBottomOf="@+id/bg_image"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_image" />

    <TextView
        android:id="@+id/tv_subtitle_onboarding_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sub_title_onboarding_two"
        android:textColor="@color/blue_patian_normal"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_image" />

    <TextView
        android:id="@+id/tv_title_onboarding_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_onboarding_two"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_onboarding_two" />

    <TextView
        android:id="@+id/tv_desc_onboarding_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_onboarding_one"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_onboarding_two" />

    <View
        android:id="@+id/page_one"
        android:layout_width="33dp"
        android:layout_height="3dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_onboarding_one" />

    <View
        android:id="@+id/page_two"
        android:layout_width="33dp"
        android:layout_height="3dp"
        android:layout_marginStart="5dp"
        android:background="@color/white_light"
        app:layout_constraintBottom_toBottomOf="@id/page_one"
        app:layout_constraintStart_toEndOf="@id/page_one"
        app:layout_constraintTop_toTopOf="@+id/page_one" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:background="@drawable/bg_button_blue"
        android:text="@string/text_next"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator_page_onboarding" />


</androidx.constraintlayout.motion.widget.MotionLayout>